--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </div>
         <button onclick="rollDice()">Lắc</button>
         <div id="result" class="result"></div>
+        <div id="all-results" class="all-results"></div>
     </div>
     <script src="script.js"></script>
 </body>
